Cambios en layout e incorporación de página de proyectos y about.

--- a/about/index.html
+++ b/about/index.html
@@ -5,6 +5,23 @@ title: J.D. Zárate
 <div id="home" style="margin-top:1em;">
   <h1 class="header-content">Acerca de Mí</h1>
   <ul class="posts">
-    <h2>Paciencia. Pronto.</h2>
+    <img src="http://i.imgur.com/eGgfXde.png" style="width:auto;" align="top">
+    <div style='font-family: "Vollkorn","Georgia", "Times New Roman", serif;'>
+	    <p><br>
+	    	Mi nombre es José Daniel Zárate. Quizás has oído hablar de mí o quizás no... en 2003 me gradué de un colegio marista y en 2010 de una universidad jesuita. Técnicamente soy licenciado en Ciencias de la Computación pero en realidad nunca he sido fanático de los títulos. 
+	    </p>
+	    <p>
+	    	Soy un "developer" a tiempo completo, eso incluye tiempo libre. Mi plataforma favorita es la Web y mi lenguaje de programación favorito es Python, con este lenguaje he desarrollado varios proyectos que incluyen <a href="http://www.crupzi.com">Crupzi.com</a>, <a href="http://www.quoffee.com">Quoffee.com</a> y <a href="http://wrteen.jdzarate.webfactional.com/">Wrteen</a>. Encuentro fascinante el análisis de datos, específicamente estadísticas y análisis deportivos.
+	    </p>
+	    <p>
+	    	Me encanta leer. Mi Kindle es fácilmente la mejor compra que he hecho en la vida. Soy un gran defensor de los libros digitales sin DRM. Además, soy fanático de la música "indie",  del básketbol, béisbol y del fútbol. Y no puedo creer que casi se me olvidan las "sitcoms", podría ver "sitcoms" todo el día.
+	    </p>
+	    <p>
+	    	Puedes seguirme en Twitter en <a href="http://www.twitter.com/jdzarate">@jdzaratem</a>.
+	    </p>
+	    <p>
+	    	La foto que ves fue un accidente, es un recorte de una foto en la que el objetivo principal era mi hermano, yo simplemente aparecí. Fue tomada el día de nuestra graduación.
+	    </p>
+    </div>
   </ul>
 </div>
