--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: default
 title: J.D. Zárate
 ---
-<div id="home" style="margin-top:1em;">
+<div id="home" style="">
   <h1 class="header-content">Blog Posts</h1>
   <ul class="posts">
     {% for post in site.categories.blog %}
