Cambios en about..

--- a/about/index.html
+++ b/about/index.html
@@ -20,7 +20,7 @@ title: J.D. Zárate
 	    	Puedes seguirme en Twitter en <a href="http://www.twitter.com/jdzarate">@jdzaratem</a>.
 	    </p>
 	    <p>
-	    	La foto que ves fue un accidente, es un recorte de una foto en la que el objetivo principal era mi hermano, yo simplemente aparecí. Fue tomada el día de nuestra graduación.
+	    	La foto que ves fue un accidente, es un recorte de una foto en la que el objetivo era mi hermano, yo simplemente estaba en el medio, mirando hacia el horizonte con expectativas inciertas... fue tomada el día de nuestra graduación.
 	    </p>
     </div>
   </ul>
