--- a/about/index.html
+++ b/about/index.html
@@ -5,13 +5,13 @@ title: jdzarate.com - About
 <div id="home" style="margin-top:1em;">
   <h3 class="header-content">Acerca de Mí</h3>
   <ul class="posts">
-    <img src="http://i.imgur.com/eGgfXde.png" style="width:auto;" align="top">
+    <img src="https://i.imgur.com/eGgfXde.png" style="width:auto;" align="top">
     <div>
 	    <p><br>
 	    	Mi nombre es José Daniel Zárate. Quizás has oído hablar de mí o quizás no... técnicamente soy un licenciado en Ciencias de la Computación pero en realidad nunca he sido fanático de los títulos. Quizás solo soy un escritor de software o tal vez ni siquiera eso.
 	    </p>
 	    <p>
-	    	Puedes seguirme en Twitter en <a href="http://www.twitter.com/jdzarate">@jdzaratem</a>.
+	    	Puedes seguirme en Twitter en <a href="https://www.twitter.com/jdzarate">@jdzaratem</a>.
 	    </p>
     </div>
   </ul>
