agregando post de gatsbyjs septiembre 2018

--- a/index.html
+++ b/index.html
@@ -25,5 +25,5 @@ title: jdzarate.com
     {% endfor %}
   </ul>
 
-  <p><a href="">Ir al Archivo de posts</a></li></p>
+  <p><a href="/archive">Ir al Archivo de posts</a></li></p>
 </div>
